--- a/Real Analysis/Review Doc/Real_Analysis_Qual_Notes.tex
+++ b/Real Analysis/Review Doc/Real_Analysis_Qual_Notes.tex
@@ -142,8 +142,17 @@ Notation & Definition \\
     .\end{align*}
   \end{itemize}
 \item
-  Continuity / differentiability: show it holds on \([-M, M]\) for all
-  \(M\) to get it to hold on \({\mathbb{R}}\).
+  Continuity / differentiability:
+
+  \begin{itemize}
+  \tightlist
+  \item
+    Show it holds on \([-M, M]\) for all \(M\) to get it to hold on
+    \({\mathbb{R}}\).
+  \item
+    In higher dimensions: intersect with a ball
+    \(B_R(\mathbf{0})\subset {\mathbb{R}}^n\) about zero.
+  \end{itemize}
 \item
   Simplifications:
 
@@ -151,15 +160,21 @@ Notation & Definition \\
   \tightlist
   \item
     To show something for a measurable set, show it for
-    bounded/compact/elementary sets/
+    bounded/compact/elementary sets and use approximations in measure.
   \item
-    To show something for a function, show it for continuous, bounded,
-    compactly supported, simple, chi functions, \(L^1\), etc
+    To show something for an arbitrary function, try various dense
+    classes of functions: continuous, bounded, compactly supported,
+    simple, indicator functions, etc and use approximations in norm.
   \item
-    Replace a continuous sequence (\({\varepsilon}\to 0\)) with an
-    arbitrary countable sequence (\(x_n \to 0\))
-  \item
-    Intersect with a ball \(B_r(\mathbf{0})\subset {\mathbb{R}}^n\).
+    Replace \({\varepsilon}\to 0\) with an arbitrary countable sequence
+    (\(x_n \to 0\))
+
+    \begin{itemize}
+    \tightlist
+    \item
+      Note: this is not always helpful, since you now have to predicate
+      over all such sequences.
+    \end{itemize}
   \end{itemize}
 \item
   Integrals
@@ -178,7 +193,7 @@ Notation & Definition \\
       Or break integration region into disjoint annuli.
     \end{itemize}
   \item
-    Break up into
+    For pairs of functions \(f, g\): break up into
     \(\left\{{f>g}\right\} {\textstyle\coprod}\left\{{f=g}\right\} {\textstyle\coprod}\left\{{f< g}\right\}\).
   \item
     Tail estimates!
@@ -191,21 +206,19 @@ Notation & Definition \\
   \begin{itemize}
   \item
     Always consider bounded sets, and if \(E\) is unbounded write
-    \(E = \cup_{n} B_{n}(0) \cap E\) and use countable subadditivity or
-    continuity of measure.
+    \(E = \displaystyle\bigcup_{n\geq 0} \qty{ B_{n}(0) \cap E}\) and
+    use countable subadditivity or continuity of measure.
   \item
     \(F_\sigma\) sets are Borel, so establish something for Borel sets
     and use this to extend it to Lebesgue.
   \item
     \(s = \inf\left\{{x\in X}\right\} \implies\) for every
     \(\varepsilon\) there is an \(x\in X\) such that
-    \(x \leq s + \varepsilon\).
+    \(x \leq s + \varepsilon\) or \(x\in [s, s+{\varepsilon}]\).
   \end{itemize}
 \item
-  Approximate by dense subsets of functions
-\item
-  Useful facts about compactly supported (\(C_c({\mathbb{R}})\))
-  continuous functions:
+  Useful facts about continuous compactly supported
+  (\(C_c^0({\mathbb{R}})\)) functions:
 
   \begin{itemize}
   \tightlist
@@ -216,35 +229,299 @@ Notation & Definition \\
   \end{itemize}
 \end{itemize}
 
+\hypertarget{the-absolute-essentials}{%
+\subsection{The Absolute Essentials}\label{the-absolute-essentials}}
+
+\begin{proposition}[Convergent Sums Have Small Tails]
+
+\begin{align*}\sum a_n < \infty \implies a_n \to 0 {\quad \operatorname{and} \quad} \sum_{k=N}^\infty a_n \overset{N\to\infty}\to 0\end{align*}
+
+\end{proposition}
+
+\begin{theorem}[Uniform Limit Theorem]
+
+If \(f_n\to f\) pointwise and uniformly with each \(f_n\) continuous,
+then \(f\) is continuous. \footnote{Slogan: a uniform limit of
+  continuous functions is continuous.}
+
+\end{theorem}
+
+\begin{proof}
+
+\envlist
+
+\begin{itemize}
+\item
+  Follows from an \(\varepsilon/3\) argument:
+  \begin{align*}  
+  {\left\lvert {F(x) - F(y} \right\rvert} \leq 
+  {\left\lvert {F(x) - F_N(x)} \right\rvert} + {\left\lvert {F_N(x) - F_N(y)} \right\rvert} + {\left\lvert {F_N(y) - F(y)} \right\rvert} 
+  \leq {\varepsilon}\to 0
+  .\end{align*}
+
+  \begin{itemize}
+  \tightlist
+  \item
+    The first and last \({\varepsilon}/3\) come from uniform convergence
+    of \(F_N\to F\).
+  \item
+    The middle \({\varepsilon}/3\) comes from continuity of each
+    \(F_N\).
+  \end{itemize}
+\item
+  So just need to choose \(N\) large enough and \(\delta\) small enough
+  to make all 3 \(\varepsilon\) bounds hold.
+\end{itemize}
+
+\end{proof}
+
+\begin{proposition}[Uniform Limits Commute with Integrals]
+
+If \(f_n \to f\) uniformly, then \(\int f_n = \int f\).
+
+\end{proposition}
+
+\begin{proposition}[Weak $M\dash$Test]
+
+If \(f_n(x) \leq M_n\) \textbf{for a fixed \(x\)} where
+\(\sum M_n < \infty\), then the series \(f(x) = \sum f_n(x)\) converges
+pointwise.\footnote{Note that this is only pointwise convergence of
+  \(f\), whereas the full \(M{\hbox{-}}\)test gives uniform convergence.}
+
+\end{proposition}
+
+\begin{proposition}[The Weierstrass $M\dash$Test]
+
+If \(\sup_{x\in A} {\left\lvert {f_n(x)} \right\rvert} \leq M_n\) for
+each \(n\) where \(\sum M_n < \infty\), then
+\(\sum_{n=1}^\infty f_n(x)\) converges uniformly and absolutely on
+\(A\). \footnote{It suffices to show
+  \({\left\lvert {f_n(x)} \right\rvert} \leq M_n\) for some \(M_n\) not
+  depending on \(x\).} Conversely, if \(\sum f_n\) converges uniformly
+on \(A\) then
+\(\sup_{x\in A} {\left\lvert {f_n(x)} \right\rvert} \to 0\).
+
+\end{proposition}
+
+\begin{proposition}[Borel Characterization of Measurable Sets]
+
+If \(E\) is Lebesgue measurable, then \(E = H {\textstyle\coprod}N\)
+where \(H \in F_\sigma\) and \(N\) is null.
+
+\end{proposition}
+
+\begin{proof}[of Borel characterization]
+
+For every \(\frac 1 n\) there exists a closed set \(K_{n} \subset E\)
+such that \(m(E\setminus K_{n}) \leq \frac 1 n\). Take
+\(K = \cup K_{n}\), wlog \(K_{n} \nearrow K\) so
+\(m(K) = \lim m(K_{n}) = m(E)\). Take \(N\coloneqq E\setminus K\), then
+\(m(N) = 0\).
+
+\end{proof}
+
+\begin{theorem}[Measurable sets can be approximated by open/closed/compact sets.]
+
+Suppose \(E\) is measurable; then for every \({\varepsilon}>0\),
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  There exists an open \(O\supset E\) with
+  \(m(O\setminus E) < {\varepsilon}\)
+\item
+  There exists a closed \(F\subset E\) with
+  \(m(E\setminus F) < {\varepsilon}\)
+\item
+  There exists a compact \(K\subset E\) with
+  \(m(E\setminus K) < {\varepsilon}\).
+\end{enumerate}
+
+\end{theorem}
+
+\begin{proof}[that measurable sets can be approximated]
+
+\envlist
+
+\begin{itemize}
+\tightlist
+\item
+  (1): Take \(\left\{{Q_{i}}\right\} \rightrightarrows E\) and set
+  \(O = \cup Q_{i}\).
+\item
+  (2): Since \(E^c\) is measurable, produce \(O\supset E^c\) with
+  \(m(O\setminus E^c) < {\varepsilon}\).
+
+  \begin{itemize}
+  \tightlist
+  \item
+    Set \(F = O^c\), so \(F\) is closed.
+  \item
+    Then \(F\subset E\) by taking complements of \(O\supset E^c\)
+  \item
+    \(E\setminus F = O\setminus E^c\) and taking measures yields
+    \(m(E\setminus F) < {\varepsilon}\)
+  \end{itemize}
+\item
+  (3): Pick \(F\subset E\) with \(m(E\setminus F) < {\varepsilon}/2\).
+
+  \begin{itemize}
+  \tightlist
+  \item
+    Set \(K_{n} = F\cap{\mathbb{D}}_{n}\), a ball of radius \(n\) about
+    \(0\).
+  \item
+    Then \(E\setminus K_{n} \searrow E\setminus F\)
+  \item
+    Since \(m(E) < \infty\), there is an \(N\) such that
+    \(n\geq N \implies m(E\setminus K_{n}) < {\varepsilon}\).
+  \end{itemize}
+\end{itemize}
+
+\end{proof}
+
+\hypertarget{quintessential-qual-problems}{%
+\subsection{Quintessential Qual
+Problems}\label{quintessential-qual-problems}}
+
+\begin{exercise}[?]
+
+\envlist
+
+\begin{itemize}
+\tightlist
+\item
+  Prove the Lebesgue integral is translation/dilation invariant.
+\item
+  Prove continuity in \(L_1\):
+  \({\left\lVert {\tau_hf - f} \right\rVert}\overset{h\to 0}\longrightarrow 0\).
+\item
+  Prove that \(E\) is measurable \(\iff\) \(E = F {\textstyle\coprod}Z\)
+  with \(F\in F_\sigma\) and \(Z\) null \(\iff\) \(E = G\setminus Z\)
+  with \(G\in G_\delta\) and \(Z\) null.
+\item
+  Show that \(m(E) = \sup_{K \subseteq E}m(K) \iff\) there exists
+  \(K = K({\varepsilon})\) with
+  \(m(K) \in [m(E) - {\varepsilon}, m(E)]\).
+
+  \begin{itemize}
+  \tightlist
+  \item
+    What's most useful here is the proof technique, not so much the
+    result itself.
+  \end{itemize}
+\item
+  Apply Fubini and Tonelli to literally anything.
+\item
+  Prove that
+  \({\left\lVert {f} \right\rVert}_p\to {\left\lVert {f} \right\rVert}_\infty\)
+  over a finite measure space.
+\item
+  Apply Cauchy-Schwarz to literally anything, in the form of
+  \({\left\lVert {fg} \right\rVert}_1 \leq {\left\lVert {f} \right\rVert}_2 {\left\lVert {g} \right\rVert}_2\).
+\end{itemize}
+
+\end{exercise}
+
+\begin{proposition}[Measurable Slices]
+
+Let \(E\) be a measurable subset of \({\mathbb{R}}^n\). Then
+
+\begin{itemize}
+\tightlist
+\item
+  For almost every \(x\in {\mathbb{R}}^{n_1}\), the slice
+  \(E_x \coloneqq\left\{{y \in {\mathbb{R}}^{n_2} \mathrel{\Big|}(x,y) \in E}\right\}\)
+  is measurable in \({\mathbb{R}}^{n_2}\).
+\item
+  The function
+\end{itemize}
+
+\begin{align*}
+F: {\mathbb{R}}^{n_1} &\to {\mathbb{R}}\\
+x &\mapsto m(E_x) = \int_{{\mathbb{R}}^{n_2}} \chi_{E_x} ~dy
+\end{align*}
+is measurable and
+\begin{align*}
+m(E) = \int_{{\mathbb{R}}^{n_1}} m(E_x) ~dx 
+= \int_{{\mathbb{R}}^{n_1}} \int_{{\mathbb{R}}^{n_2}} \chi_{E_x} ~dy ~dx
+.\end{align*}
+
+\end{proposition}
+
+\begin{proof}[of measurable slices]
+
+\envlist
+
+\(\implies\):
+
+\begin{itemize}
+\tightlist
+\item
+  Let \(f\) be measurable on \({\mathbb{R}}^n\).
+\item
+  Then the cylinders \(F(x, y) = f(x)\) and \(G(x, y) = f(y)\) are both
+  measurable on \({\mathbb{R}}^{n+1}\).
+\item
+  Write
+  \(\mathcal{A} = \left\{{G \leq F}\right\} \cap\left\{{G \geq 0}\right\}\);
+  both are measurable.
+\end{itemize}
+
+\(\impliedby\):
+
+\begin{itemize}
+\tightlist
+\item
+  Let \(A\) be measurable in \({\mathbb{R}}^{n+1}\).
+\item
+  Define
+  \(A_x = \left\{{y\in {\mathbb{R}}\mathrel{\Big|}(x, y) \in \mathcal{A}}\right\}\),
+  then \(m(A_x) = f(x)\).
+\item
+  By the corollary, \(A_x\) is measurable set, \(x \mapsto A_x\) is a
+  measurable function, and \(m(A) = \int f(x) ~dx\).
+\item
+  Then explicitly, \(f(x) = \chi_{A}\), which makes \(f\) a measurable
+  function.
+\end{itemize}
+
+\end{proof}
+
 \hypertarget{definitions}{%
 \subsection{Definitions}\label{definitions}}
 
-\begin{definition}[Completeness]
+\hypertarget{convergence-and-continuity}{%
+\subsubsection{Convergence and
+Continuity}\label{convergence-and-continuity}}
 
-A metric space is \textbf{complete} if every Cauchy sequence converges.
+\begin{definition}[Limsup/Liminf]
+
+\begin{align*}  
+\limsup_n a_n = \lim_{n\to \infty} \sup_{j\geq n} a_j &= \inf_{n\geq 0} \sup_{j\geq n} a_j \\ 
+\liminf_n a_n = \lim_{n\to \infty} \inf_{j\geq n} a_j &= \sup_{n\geq 0} \inf_{j\geq n} a_j
+.\end{align*}
 
 \end{definition}
-
-\begin{fact}
-
-If \(X\) is complete, then absolutely convergent implies convergent.
-
-\end{fact}
 
 \begin{definition}[Continuity and Uniform Continuity]
 
 A function \(f: {\mathbb{R}}\to {\mathbb{R}}\) is \textbf{continuous} on
-a set \(X\) iff
+\(X\) iff for all \(x_0\in X\),
 \begin{align*}
-\forall x_0 \in X, \forall {\varepsilon}>0, \quad \exists\delta = \delta(x_0, {\varepsilon}) >0 \quad\text{ such that }\quad \forall x\in X, \, {\left\lvert {x-x_0} \right\rvert}<\delta \implies {\left\lvert {f(x) - f(x_0)} \right\rvert} < {\varepsilon}
+&\forall \varepsilon \quad \exists \delta(\varepsilon, x_0) \text{ such that }\quad \forall y, {\left\lvert {x_0 - y} \right\rvert} < \delta &&\implies {\left\lvert {f(x_0) - f(y)} \right\rvert} < \varepsilon \\
+\iff &\forall \varepsilon \quad \exists \delta(\varepsilon, x_0) \text{ such that }\quad \forall h, {\left\lvert {h} \right\rvert} < \delta &&\implies {\left\lvert {f(x_0) - f(x_0 \pm h)} \right\rvert} < \varepsilon
 .\end{align*}
 
-\(f\) is \textbf{uniformly continuous} iff
+\(f\) is \textbf{uniformly continuous} on \(X\) iff
 
 \begin{align*}
-  &\forall \varepsilon \quad \exists \delta(\varepsilon) \text{ such that }\quad \forall x, y, \in X \quad {\left\lvert {x - y} \right\rvert} < \delta \implies {\left\lvert {f(x) - f(y)} \right\rvert} < \varepsilon \\
-\iff &\forall \varepsilon \quad \exists \delta(\varepsilon) \mathrel{\Big|}\quad \forall x, y, \quad {\left\lvert {y} \right\rvert} < \delta \implies {\left\lvert {f(x-y) - f(y)} \right\rvert} < \varepsilon
+  &\forall \varepsilon \quad \exists \delta(\varepsilon) \text{ such that }\quad \forall x, y, \in X \quad {\left\lvert {x - y} \right\rvert} < \delta &&\implies {\left\lvert {f(x) - f(y)} \right\rvert} < \varepsilon \\
+\iff &\forall \varepsilon \quad \exists \delta(\varepsilon) \text{ such that} \quad \, \forall x, h, \quad {\left\lvert {h} \right\rvert} < \delta &&\implies {\left\lvert {f(x) - f(x \pm h)} \right\rvert} < \varepsilon
 .\end{align*}
+These follow from the substitutions
+\(x_0-y = \mp h \implies y = x_0 \pm h\).
 
 \end{definition}
 
@@ -279,39 +556,6 @@ for a fixed \({\varepsilon}\) take
 
 \end{proposition}
 
-\begin{definition}[Nowhere Dense Sets]
-
-A set \(S\) is \textbf{nowhere dense} iff the closure of \(S\) has empty
-interior iff every interval contains a subinterval that does not
-intersect \(S\).
-
-\end{definition}
-
-\begin{definition}[Meager Sets]
-
-A set is \textbf{meager} if it is a \emph{countable} union of nowhere
-dense sets.
-
-\end{definition}
-
-\begin{definition}[$F_\sigma$ and $G_\delta$ Sets]
-
-An \(F_\sigma\) set is a union of closed sets, and a \(G_\delta\) set is
-an intersection of opens. \footnote{Mnemonic: ``F'' stands for
-  \emph{ferme}, which is ``closed'' in French, and \(\sigma\)
-  corresponds to a ``sum'', i.e.~a union.}
-
-\end{definition}
-
-\begin{definition}[Limsup/Liminf]
-
-\begin{align*}  
-\limsup_n a_n = \lim_{n\to \infty} \sup_{j\geq n} a_j &= \inf_{n\geq 0} \sup_{j\geq n} a_j \\ 
-\liminf_n a_n = \lim_{n\to \infty} \inf_{j\geq n} a_j &= \sup_{n\geq 0} \inf_{j\geq n} a_j
-.\end{align*}
-
-\end{definition}
-
 \begin{definition}[Topological Notions]
 
 Let \(X\) be a metric space and \(A\) a subset. Let \(A'\) denote the
@@ -329,12 +573,10 @@ to be its closure.
   \(B_r(p) \coloneqq\left\{{q {~\mathrel{\Big|}~}d(p, q) < r}\right\}\)
   for some \(r>0\).
 \item
-  A point \(p\in X\) is an \textbf{accumulation point} of \(A\) iff
-  every neighborhood \(U_p\) of \(p\) contains a point \(q\in Q\)
-\item
-  A point \(p\in X\) is a \textbf{limit point} of \(A\) iff every
-  \emph{punctured} neighborhood \(U_p\setminus\left\{{p}\right\}\)
-  contains a point \(q\in A\).
+  A point \(p\in X\) is an \textbf{accumulation point} or a
+  \textbf{limit point} of \(A\) iff every \emph{punctured} neighborhood
+  \(U_p\setminus\left\{{p}\right\}\) contains a point \(q\in A\), so
+  \(q\neq p\).
 \item
   If \(p\in A\) and \(p\) is not a limit point of \(A\), then \(p\) is
   an \textbf{isolated point} of \(A\).
@@ -368,6 +610,16 @@ to be its closure.
 
 \end{definition}
 
+\begin{definition}[Pointwise Convergence]
+
+A sequence of functions \(\left\{{ f_j }\right\}\) is said to
+\textbf{converge pointwise} to \(f\) if and only if
+\begin{align*}  
+(\forall \varepsilon>0)(\forall x \in S)\left(\exists n_{0} = n_0(x, {\varepsilon}) \right)\left(\forall n>n_{0}\right)\left(\left|f_{n}(x)-f(x)\right|<\varepsilon\right)
+.\end{align*}
+
+\end{definition}
+
 \begin{definition}[Uniform Convergence]
 
 \begin{align*}
@@ -381,79 +633,142 @@ Negated:\footnote{Slogan: to negate, find a bad \(x\) depending on
 
 \end{definition}
 
-\begin{definition}[Pointwise Convergence]
+\hypertarget{function-spaces}{%
+\subsubsection{Function Spaces}\label{function-spaces}}
 
-A sequence of functions \(\left\{{ f_j }\right\}\) is said to
-\textbf{converge pointwise} to \(f\) if and only if
-\begin{align*}  
-(\forall \varepsilon>0)(\forall x \in S)\left(\exists n_{0} = n_0(x, {\varepsilon}) \right)\left(\forall n>n_{0}\right)\left(\left|f_{n}(x)-f(x)\right|<\varepsilon\right)
+\begin{definition}[Completeness]
+
+A metric space is \textbf{complete} if every Cauchy sequence converges.
+
+\end{definition}
+
+\begin{fact}
+
+If \(X\) is complete, then absolutely convergent implies convergent.
+
+\end{fact}
+
+\begin{definition}[Nowhere Dense Sets]
+
+Recall that a set \(S\) in \(X\) is \textbf{dense} \(\iff\) every open
+\(U\subseteq X\) intersects \(S\). A set \(S\) is \textbf{nowhere dense}
+in \(X\) \(\iff\) the closure of \(S\) has empty interior \(\iff\) every
+subset (or interval) contains an open set (or a subinterval) that does
+not intersect \(S\). This just says \(S\) is not dense in any subset
+\(S' \subseteq X\), by negating what it means to be dense.
+
+\end{definition}
+
+\begin{definition}[Meager Sets]
+
+A set is \textbf{meager} if it is a \emph{countable} union of nowhere
+dense sets.
+
+\end{definition}
+
+\begin{proposition}[Finite unions of nowhere dense sets are still nowhere dense]
+
+A \emph{finite} union of nowhere dense is again nowhere dense.
+
+\end{proposition}
+
+\begin{definition}[Baire Space]
+
+A space \(X\) is a \textbf{Baire space} if and only if every countable
+intersections of open, dense sets is still dense.
+
+\end{definition}
+
+\hypertarget{measure-theory}{%
+\subsubsection{Measure Theory}\label{measure-theory}}
+
+\begin{definition}[Limsup and Liminf of Sets]
+
+\begin{align*}
+\liminf_{n} E_{n} \coloneqq\displaystyle\bigcup_{N=1}^\infty \displaystyle\bigcap_{n=N}^\infty E_{n} &= \left\{{x {~\mathrel{\Big|}~}x\in E_{n} \text{ for all but finitely many } n}\right\}  \\
+\limsup_{n} E_{n} \coloneqq\displaystyle\bigcap_{N=1}^\infty \displaystyle\bigcup_{n=N}^{\infty} E_{n} &= \left\{{x {~\mathrel{\Big|}~}x\in E_{n} \text{ for infinitely many } n}\right\} 
 .\end{align*}
 
 \end{definition}
 
-\begin{proposition}[Implications of convergence]
+\begin{remark}
 
-Uniform \(\implies\) pointwise \(\implies\) almost everywhere
-\(\implies\) (roughly) \(L^1\) convergence. Why these can't be reversed:
+How to derive these definitions: use that \(\inf\) corresponds to
+intersections/existence and \(\sup\) corresponds to unions/forall.
 
 \begin{itemize}
 \tightlist
 \item
-  Pointwise but not uniform???: \({1\over n}\one_{[0, n]}\)
+  For \(\liminf E_n\):
+
+  \begin{itemize}
+  \tightlist
+  \item
+    \(x\in \liminf E_n \iff\) there exists some \(N\) such that
+    \(x\in \cap_{n\geq N} E_n\), i.e.~\(x\in E_n\) for all \(n\geq N\).
+    So \(x\) is in \emph{all} but finitely many \(n\).
+  \item
+    How to remember: \(\liminf_{n} x_n = \sup_{n} \inf_{k\geq n} x_n\)
+    for sequences, where sups look like unions and infs look like
+    intersections.
+  \item
+    Alternatively: there exists an \(n\) (union) such that for all
+    \(k\geq n\) (intersection)\ldots{}
+  \end{itemize}
 \item
-  Almost everywhere but not pointwise???: \(n \one_{[0, {1\over n} ] }\)
-\item
-  \(n \chi_{[n, n+1]}\)????
+  For \(\limsup E_n\):
+
+  \begin{itemize}
+  \tightlist
+  \item
+    \(x\in \limsup E_n \iff\) for every \(N\), there exists some
+    \(n\geq N\) such that \(x\in E_n\). So \(x\) is an infinitely many
+    \(E_n\).
+  \item
+    How to remember: \(\limsup_{n} x_n = \inf{n} \sup{k\geq n} x_n\) for
+    sequences, where sups look like unions and infs look like
+    intersections.
+  \item
+    Alternatively: for all \(n\) (intersection) there exists a
+    \(k\geq n\) (union)\ldots{}
+  \end{itemize}
 \end{itemize}
 
-\end{proposition}
+It's also useful to note that \(\liminf E_n \subseteq \limsup E_n\),
+since \(\liminf E_n\) are elements that are eventually in all sets, and
+\(\limsup E_n\) are elements in infinitely many sets.
+
+Why these are useful: for finite measure spaces,
+\begin{align*}
+\mu\qty{\liminf_n E_n }\leq \liminf_n \mu(E_n) \leq \lim_n \mu(E_n) \leq \limsup_n \mu(E_n) \leq \mu\qty{\limsup_n E_n}
+.\end{align*}
+If the \(\limsup\) and \(\liminf\) sets are equal, then one can define
+the set \(\lim_n E_n \coloneqq\cup_n E_n\) if \(E_n \nearrow E\) or
+\(\lim_n E_n \coloneqq\cap_n E_n\) if \(E_n\searrow E\) in which case
+continuity of measure states
+\begin{align*}
+\mu\qty{\lim_n E_n} = \lim_n \mu(E_n)
+.\end{align*}
+
+\end{remark}
+
+\begin{definition}[$F_\sigma$ and $G_\delta$ Sets]
+
+An \(F_\sigma\) set is a union of closed sets, and a \(G_\delta\) set is
+an intersection of opens. \footnote{Mnemonic: ``F'' stands for
+  \emph{ferme}, which is ``closed'' in French, and \(\sigma\)
+  corresponds to a ``sum'', i.e.~a union.}
+
+\end{definition}
 
 \begin{definition}[Outer Measure]
 
 The \textbf{outer measure} of a set is given by
 \begin{align*}
 m_*(E) \coloneqq\inf_{\substack{\left\{{Q_{i}}\right\} \rightrightarrows E \\ \text{closed cubes}}} \sum {\left\lvert {Q_{i}} \right\rvert}
-.\end{align*}
-
-\end{definition}
-
-\begin{definition}[Limsup and Liminf of Sets]
-
-\begin{align*}
-\liminf_{n} E_{n} \coloneqq\displaystyle\bigcup_{N=1}^\infty \displaystyle\bigcap_{n=N}^\infty E_{n} &= \left\{{x {~\mathrel{\Big|}~}x\in E_{n} \text{ for all but finitely many } n}\right\}  \\
-\limsup_{n} E_{n} \coloneqq\displaystyle\bigcap_{N=1}^\infty \displaystyle\bigcup_{n=N}^{\infty} E_{n} &= \left\{{x {~\mathrel{\Big|}~}x\in E_{n} \text{ for infinitely many } n}\right\}  \\
-.\end{align*}
-
-How to derive these definitions:
-
-\begin{itemize}
-\tightlist
-\item
-  For
-  \(A \coloneqq\displaystyle\bigcup_{N=1}^\infty \displaystyle\bigcap_{n=N}^\infty E_n\):
-
-  \begin{itemize}
-  \tightlist
-  \item
-    \(x\in A \iff\) there exists some \(N\) such that
-    \(x\in \cap_{n\geq N} E_n\), i.e.~\(x\in E_n\) for all \(n\geq N\).
-    So \(x\) is in \emph{all} but finitely many \(n\).
-  \end{itemize}
-\item
-  For
-  \(B \coloneqq\displaystyle\bigcap{N=1}^\infty \displaystyle\bigcup{n=N}^\infty E_n\):
-
-  \begin{itemize}
-  \tightlist
-  \item
-    \(x\in B \iff\) for every \(N\), there exists some \(n\geq N\) such
-    that \(x\in E_n\). So \(x\) is an infinitely many \(E_n\).
-  \end{itemize}
-\end{itemize}
-
-Note that \(A\subseteq B\) since being in all but finitely many \(E_n\)
-necessarily implies being in infinitely many. This corresponds to
-\(\liminf_n E_n \subseteq \limsup_n E_n\).
+,\end{align*}
+where \({\left\lvert {Q_i} \right\rvert}\) is the standard Euclidean
+volume of a cube in \({\mathbb{R}}^n\).
 
 \end{definition}
 
@@ -472,6 +787,10 @@ this case, we define \(m(E) \coloneqq m_*(E)\).
 
 \end{definition}
 
+\hypertarget{integrals-and-lp-spaces}{%
+\subsubsection{\texorpdfstring{Integrals and \(L^p\)
+Spaces}{Integrals and L\^{}p Spaces}}\label{integrals-and-lp-spaces}}
+
 \begin{definition}[Integrability]
 
 A measurable function is \textbf{integrable} iff
@@ -479,19 +798,17 @@ A measurable function is \textbf{integrable} iff
 
 \end{definition}
 
-\begin{definition}[The Infinity Norm]
+\begin{definition}[The Infinity Norm / Essential supremum / Essentially bounded]
 
 \begin{align*}
-{\left\lVert {f} \right\rVert}_\infty &\coloneqq\inf_{\alpha \geq 0} \left\{{\alpha {~\mathrel{\Big|}~}m\left\{{{\left\lvert {f} \right\rvert} \geq \alpha}\right\} = 0}\right\}
+{\left\lVert {f} \right\rVert}_\infty &\coloneqq\inf_{\alpha \geq 0} \left\{{\alpha {~\mathrel{\Big|}~}\mu\qty{\left\{{{\left\lvert {f} \right\rvert} \geq \alpha}\right\}} = 0}\right\}
 .\end{align*}
-
-\end{definition}
-
-\begin{definition}[Essentially Bounded Functions]
-
-A function \(f:X \to {\mathbb{C}}\) is \textbf{essentially bounded} iff
-there exists a real number \(c\) such that
-\(\mu(\left\{{{\left\lvert {f} \right\rvert} > x}\right\}) = 0\),
+In words, this is the smallest upper bound that holds almost everywhere,
+so
+\({\left\lvert {f(x)} \right\rvert} \leq {\left\lVert {f} \right\rVert}_\infty\)
+holds for almost every \(x\). A function \(f:X \to {\mathbb{C}}\) is
+\textbf{essentially bounded} iff there exists a real number \(c\) such
+that \(\mu(\left\{{{\left\lvert {f} \right\rvert} > x}\right\}) = 0\),
 i.e.~\({\left\lVert {f} \right\rVert}_\infty < \infty\).
 
 \end{definition}
@@ -502,15 +819,6 @@ i.e.~\({\left\lVert {f} \right\rVert}_\infty < \infty\).
 L^\infty(X)
 \coloneqq\left\{{f: X\to {\mathbb{C}}{~\mathrel{\Big|}~}f \text{ is essentially bounded }}\right\}
 \coloneqq\left\{{f: X\to {\mathbb{C}}{~\mathrel{\Big|}~}{\left\lVert {f} \right\rVert}_{\infty }< \infty}\right\}
-.\end{align*}
-
-\end{definition}
-
-\begin{definition}[Dual Norm]
-
-For \(X\) a normed vector space and \(\Lambda \in X {}^{ \vee }\),
-\begin{align*}
-{\left\lVert {\Lambda} \right\rVert}_{X {}^{ \vee }} \coloneqq\sup_{\left\{{x\in X {~\mathrel{\Big|}~}{\left\lVert {x} \right\rVert}_X \leq 1}\right\}} {\left\lvert {f(x)} \right\rvert}
 .\end{align*}
 
 \end{definition}
@@ -545,15 +853,20 @@ an \textbf{approximate identity}.
 
 \end{definition}
 
-\begin{definition}[Baire Space]
-
-A space \(X\) is a \textbf{Baire space} if and only if every countable
-intersections of open, dense sets is still dense.
-
-\end{definition}
-
 \hypertarget{functional-analysis}{%
 \subsubsection{Functional Analysis}\label{functional-analysis}}
+
+\begin{definition}[Dual Norm]
+
+For \(X\) a normed vector space and \(L \in X {}^{ \vee }\), the
+\textbf{dual norm} or \textbf{operator norm} is defined by
+\begin{align*}
+{\left\lVert {L} \right\rVert}_{X {}^{ \vee }} 
+\coloneqq\sup_{ \substack{x\in X \\ {\left\lVert {x} \right\rVert} = 1} } {\left\lvert {L(x)} \right\rvert}
+= \sup_{ \substack{x\in X \\ {\left\lVert {x} \right\rVert} \leq  1} } {\left\lvert {L(x)} \right\rvert}
+.\end{align*}
+
+\end{definition}
 
 \begin{definition}[Orthonormal sequence ]
 
@@ -602,15 +915,6 @@ H {}^{ \vee }\coloneqq\left\{{L: H\to {\mathbb{C}}{~\mathrel{\Big|}~}L \text{ is
 A map \(L: X \to {\mathbb{C}}\) is a \textbf{linear functional} iff
 \begin{align*}
 L(\alpha\mathbf{x} + \mathbf{y}) = \alpha L(\mathbf{x}) + L(\mathbf{y}).
-.\end{align*}
-
-\end{definition}
-
-\begin{definition}[Operator norm]
-
-The \textbf{operator norm} of an operator \(L\) is defined as
-\begin{align*}
-{\left\lVert {L} \right\rVert}_{X {}^{ \vee }} \coloneqq\sup_{ \substack{x\in X \\ {\left\lVert {x} \right\rVert} = 1} } {\left\lvert {L(x)} \right\rvert}
 .\end{align*}
 
 \end{definition}
@@ -735,18 +1039,6 @@ not continuous, so no subsequence can converge.
 
 \end{proof}
 
-\begin{proposition}[?]
-
-A \emph{finite} union of nowhere dense is again nowhere dense.
-
-\end{proposition}
-
-\begin{proposition}[Convergent Sums Have Small Tails]
-
-\begin{align*}\sum a_n < \infty \implies a_n \to 0 {\quad \operatorname{and} \quad} \sum_{k=N}^\infty a_n \overset{N\to\infty}\to 0\end{align*}
-
-\end{proposition}
-
 \begin{theorem}[Heine-Borel]
 
 \(X\subseteq {\mathbb{R}}^n\) is compact \(\iff X\) is closed and
@@ -846,8 +1138,8 @@ There \emph{do not} exist functions that are discontinuous precisely on
 \begin{proof}[?]
 
 \(D_f\) is always an \(F_\sigma\) set, which follows by considering the
-oscillation \(\omega_f\). \(\omega_f(x) = 0 \iff f\) is continuous at
-\(x\), and \(D_f = \cup_n A_{\frac 1 n}\) where
+oscillation \(\omega_f\). Use that \(\omega_f(x) = 0 \iff f\) is
+continuous at \(x\), and \(D_f = \cup_n A_{\frac 1 n}\) where
 \(A_\varepsilon = \left\{{\omega_f \geq \varepsilon}\right\}\) is
 closed.
 
@@ -874,7 +1166,7 @@ For \(\left\{{a_k}\right\}\) is a non-increasing sequence in
 
 \end{proposition}
 
-\begin{proof}[?]
+\begin{proof}[showing a useful trick]
 
 Show that
 \begin{align*}
@@ -883,7 +1175,7 @@ Show that
 using
 \begin{align*}
 \sum a_k = a_0 + a_1 + a_2 + a_3 + \cdots
-\leq \qty{a_1} + \qty{a_2 + a_2} + {a_3 + a_3 + a_3 + a_3} + \cdots \\
+\leq \qty{a_1} + \qty{a_2 + a_2} + \qty {a_3 + a_3 + a_3 + a_3} + \cdots \\
 \end{align*}
 where each group with \(a_k\) has \(2^k\) terms.
 
@@ -961,49 +1253,6 @@ bounded derivative, or whatever other conditions define \(X\).
 
 \end{remark}
 
-\begin{theorem}[Uniform Limit Theorem]
-
-If \(f_n\to f\) pointwise and uniformly with each \(f_n\) continuous,
-then \(f\) is continuous. \footnote{Slogan: a uniform limit of
-  continuous functions is continuous.}
-
-\end{theorem}
-
-\begin{proof}
-
-\envlist
-
-\begin{itemize}
-\item
-  Follows from an \(\varepsilon/3\) argument:
-  \begin{align*}  
-  {\left\lvert {F(x) - F(y} \right\rvert} \leq 
-  {\left\lvert {F(x) - F_N(x)} \right\rvert} + {\left\lvert {F_N(x) - F_N(y)} \right\rvert} + {\left\lvert {F_N(y) - F(y)} \right\rvert} 
-  \leq {\varepsilon}\to 0
-  .\end{align*}
-
-  \begin{itemize}
-  \tightlist
-  \item
-    The first and last \({\varepsilon}/3\) come from uniform convergence
-    of \(F_N\to F\).
-  \item
-    The middle \({\varepsilon}/3\) comes from continuity of each
-    \(F_N\).
-  \end{itemize}
-\item
-  So just need to choose \(N\) large enough and \(\delta\) small enough
-  to make all 3 \(\varepsilon\) bounds hold.
-\end{itemize}
-
-\end{proof}
-
-\begin{proposition}[Uniform Limits Commute with Integrals]
-
-If \(f_n \to f\) uniformly, then \(\int f_n = \int f\).
-
-\end{proposition}
-
 \hypertarget{series}{%
 \subsubsection{Series}\label{series}}
 
@@ -1049,28 +1298,6 @@ If \(f_n\) are continuous and \(\sum f_n \to f\) converges uniformly,
 then \(f\) is continuous.
 
 \end{corollary}
-
-\begin{proposition}[Weak $M\dash$Test]
-
-If \(f_n(x) \leq M_n\) \textbf{for a fixed \(x\)} where
-\(\sum M_n < \infty\), then the series \(f(x) = \sum f_n(x)\)
-converges.\footnote{Note that this is only pointwise convergence of
-  \(f\), whereas the full \(M{\hbox{-}}\)test gives uniform convergence.}
-
-\end{proposition}
-
-\begin{proposition}[The Weierstrass $M\dash$Test]
-
-If \(\sup_{x\in A} {\left\lvert {f_n(x)} \right\rvert} \leq M_n\) for
-each \(n\) where \(\sum M_n < \infty\), then
-\(\sum_{n=1}^\infty f_n(x)\) converges uniformly and absolutely on
-\(A\). \footnote{It suffices to show
-  \({\left\lvert {f_n(x)} \right\rvert} \leq M_n\) for some \(M_n\) not
-  depending on \(x\).} Conversely, if \(\sum f_n\) converges uniformly
-on \(A\) then
-\(\sup_{x\in A} {\left\lvert {f_n(x)} \right\rvert} \to 0\).
-
-\end{proposition}
 
 \begin{proposition}[Cauchy criterion for sums]
 
@@ -1158,8 +1385,9 @@ and \(f_n'(0) \to 1\).
 
 \end{proposition}
 
-\hypertarget{almost-theorems}{%
-\subsection{``Almost'' Theorems}\label{almost-theorems}}
+\hypertarget{probabilist-tools-almost-theorems}{%
+\subsection{Probabilist Tools: ``Almost''
+Theorems}\label{probabilist-tools-almost-theorems}}
 
 \begin{theorem}[Egorov's Theorem]
 
@@ -1417,8 +1645,8 @@ Exercises from Folland:
   Chapter 3: Exercises 3(b,c), 5, 6, 9, 12, 13, 14, 16, 20, 21, 22
 \end{itemize}
 
-\hypertarget{measure-theory}{%
-\section{Measure Theory}\label{measure-theory}}
+\hypertarget{measure-theory-1}{%
+\section{Measure Theory}\label{measure-theory-1}}
 
 \begin{fact}
 
@@ -1431,7 +1659,8 @@ Some useful tricks:
 \item
   Write \(f = f-f_n + f_n\)
 \item
-  If \(G\) is measurable, then there exists an \(E \supseteq G\) such
+  If \(G\) is measurable, then there for every \({\varepsilon}\) there
+  exists an open \(G \supseteq E\) such
   \(m(G) \leq m(E) + {\varepsilon}\)
 \item
   If \(E\) is measurable,
@@ -1502,9 +1731,9 @@ Let \((X, {\mathcal{M}}, \mu)\) be a measure space. Then
 
 \begin{align*}
 \text{Continuity from below:} \quad 
-E_{n} \nearrow E &\implies m(E_{n}) \to m(E) \\
+E_{n} \nearrow E &\implies m(E_{n}) \overset{n\to\infty}\longrightarrow m(E) \\
 \text{Continuity from above:} \quad 
-m(E_{1}) < \infty \text{ and } E_{i} \searrow E &\implies m(E_{i}) \to m(E)
+m(E_{1}) < \infty \text{ and } E_{n} \searrow E &\implies m(E_{n}) \overset{n\to\infty}\longrightarrow m(E)
 .\end{align*}
 
 Mnemonic: \(\lim_n \mu(E_n) = \mu(\lim E_n)\).
@@ -1577,7 +1806,8 @@ closed under countable intersections.
     \(x\not \in F_1\) but \(x\in F_2\), noting incidentally
     \(x\in F_3, F_4,\cdots\), \textbf{or},
   \item
-    \(x\not\in F_2\) but \(x\in F_3\), and so on.
+    \(x\not\in F_2\) but \(x\in F_3\) and thus \(F_4, F_4,\cdots\), and
+    so on.
   \end{itemize}
 \item
   Now take measures, and note that we get a telescoping sum:
@@ -1652,16 +1882,17 @@ closed under countable intersections.
 
 \end{proposition}
 
+\begin{definition}[Lebesgue Measurability]
+
+A set \(E\) is \textbf{measurable} iff it can be approximated by an open
+set in \(m_*\), so there exists \(G\supseteq E\) with
+\(m_*(G\setminus E) < {\varepsilon}\).
+
+\end{definition}
+
 \hypertarget{measures-on-mathbbrd}{%
 \subsection{\texorpdfstring{Measures on
 \({\mathbb{R}}^d\)}{Measures on \{\textbackslash mathbb\{R\}\}\^{}d}}\label{measures-on-mathbbrd}}
-
-\begin{proposition}[Borel Characterization of Measurable Sets]
-
-If \(E\) is Lebesgue measurable, then \(E = H {\textstyle\coprod}N\)
-where \(H \in F_\sigma\) and \(N\) is null.
-
-\end{proposition}
 
 \begin{proposition}[Opens are unions of almost disjoint intervals.]
 
@@ -1671,77 +1902,38 @@ intervals (resp. cubes).
 
 \end{proposition}
 
-\begin{theorem}[Measurable sets can be approximated by open/closed/compact sets.]
-
-Suppose \(E\) is measurable; then for every \({\varepsilon}>0\),
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\tightlist
-\item
-  There exists an open \(O\supset E\) with
-  \(m(O\setminus E) < {\varepsilon}\)
-\item
-  There exists a closed \(F\subset E\) with
-  \(m(E\setminus F) < {\varepsilon}\)
-\item
-  There exists a compact \(K\subset E\) with
-  \(m(E\setminus K) < {\varepsilon}\).
-\end{enumerate}
-
-\end{theorem}
-
-\begin{proof}[that measurable sets can be approximated]
-
-\envlist
-
-\begin{itemize}
-\tightlist
-\item
-  (1): Take \(\left\{{Q_{i}}\right\} \rightrightarrows E\) and set
-  \(O = \cup Q_{i}\).
-\item
-  (2): Since \(E^c\) is measurable, produce \(O\supset E^c\) with
-  \(m(O\setminus E^c) < {\varepsilon}\).
-
-  \begin{itemize}
-  \tightlist
-  \item
-    Set \(F = O^c\), so \(F\) is closed.
-  \item
-    Then \(F\subset E\) by taking complements of \(O\supset E^c\)
-  \item
-    \(E\setminus F = O\setminus E^c\) and taking measures yields
-    \(m(E\setminus F) < {\varepsilon}\)
-  \end{itemize}
-\item
-  (3): Pick \(F\subset E\) with \(m(E\setminus F) < {\varepsilon}/2\).
-
-  \begin{itemize}
-  \tightlist
-  \item
-    Set \(K_{n} = F\cap{\mathbb{D}}_{n}\), a ball of radius \(n\) about
-    \(0\).
-  \item
-    Then \(E\setminus K_{n} \searrow E\setminus F\)
-  \item
-    Since \(m(E) < \infty\), there is an \(N\) such that
-    \(n\geq N \implies m(E\setminus K_{n}) < {\varepsilon}\).
-  \end{itemize}
-\end{itemize}
-
-\end{proof}
-
 \begin{proposition}[Translation and Dilation Invariance]
 
 Lebesgue measure is translation and dilation invariant.
 
 \end{proposition}
 
-\begin{proof}[(Todo) of translation/dilation invariance]
+\begin{proof}[of translation/dilation invariance]
 
-Obvious for cubes; if \(Q_{i} \rightrightarrows E\) then
-\(Q_{i} + k \rightrightarrows E + k\), etc.
+\envlist
+
+\begin{itemize}
+\tightlist
+\item
+  This is obvious for cubes:
+
+  \begin{itemize}
+  \tightlist
+  \item
+    For translation, if \(Q_i \rightrightarrows E\) then
+    \(Q_i + k \rightrightarrows E + k\). One can then show
+    \(m_*(E + k) \leq \sum {\left\lvert {Q_i + k} \right\rvert} = \sum {\left\lvert {Q_i} \right\rvert}\leq m_*(E) + {\varepsilon}\)
+    for all \({\varepsilon}\), and get the reverse inequality by writing
+    \(E = (E+y)-y\).
+  \item
+    For dilation, use that
+    \(m_*(t(A{\textstyle\coprod}B)) = tm_*(A{\textstyle\coprod}B)\),
+    which is useful because we cover with disjoint cubes. Then use that
+    \(tQ_i \rightrightarrows tE\) to get
+    \(tm_*(E) \leq t\sum {\left\lvert {Q_i} \right\rvert} = \sum {\left\lvert {tQ_i} \right\rvert} \leq m_*(tE) + {\varepsilon}\)
+    and similarly reverse to get equality.
+  \end{itemize}
+\end{itemize}
 
 \end{proof}
 
@@ -1772,16 +1964,6 @@ There is a non-measurable set \(A\subseteq {\mathbb{R}}\).
   By translation invariance, \(m(N_{j}) = m(N)\), and disjoint
   additivity forces \(m(M) = 0\), a contradiction.
 \end{itemize}
-
-\end{proof}
-
-\begin{proof}[of Borel characterization]
-
-For every \(\frac 1 n\) there exists a closed set \(K_{n} \subset E\)
-such that \(m(E\setminus K_{n}) \leq \frac 1 n\). Take
-\(K = \cup K_{n}\), wlog \(K_{n} \nearrow K\) so
-\(m(K) = \lim m(K_{n}) = m(E)\). Take \(N\coloneqq E\setminus K\), then
-\(m(N) = 0\).
 
 \end{proof}
 
@@ -2032,7 +2214,7 @@ measurable, since
 \begin{itemize}
 \tightlist
 \item
-  \(L^+\): measurable functions
+  \(L^+\): nonnegative measurable functions
 \item
   \(L^1\): Lebesgue integrable functions, so
   \(\int {\left\lvert {f} \right\rvert} < \infty\)
@@ -2184,8 +2366,8 @@ If
 \item
   \(f_n \in L^1\) with \(f_n \to f\) almost everywhere,
 \item
-  There exist \(g_n \in L^1\) with
-  \({\left\lvert {f_n} \right\rvert} \leq g_n\), \(g_n \geq 0\).
+  There exist \(g_n\geq 0 \in L^1\) nonnegative with
+  \({\left\lvert {f_n} \right\rvert} \leq g_n\),
 \item
   \(g_n\to g\) almost everywhere with \(g\in L^1\), and
 \item
@@ -2224,7 +2406,8 @@ Proceed by showing
   \begin{itemize}
   \tightlist
   \item
-    Here we use \(g_n - f_n \overset{n\to\infty} g-f\) with
+    Here we use \(g_n - f_n \overset{n\to\infty}\longrightarrow g-f\)
+    with
     \(0 \leq {\left\lvert {f_n} \right\rvert} - f_n \leq g_n - f_n\), so
     \(g_n - f_n\) are nonnegative (and measurable) and Fatou's lemma
     applies.
@@ -2267,7 +2450,7 @@ Let
 \(g_n = {\left\lvert {f_n} \right\rvert} - {\left\lvert {f_n - f} \right\rvert}\),
 then \(g_n \to {\left\lvert {f} \right\rvert}\) and
 \begin{align*}
-{\left\lvert {g_n} \right\rvert} = {\left\lvert { {\left\lvert {f_n} \right\rvert} - {\left\lvert {f_n - f} \right\rvert} } \right\rvert} \leq {\left\lvert {f_n - (f_n - f)} \right\rvert} = {\left\lvert {f} \right\rvert} \in L^1
+{\left\lvert {g_n} \right\rvert} = {\left\lvert { {\left\lvert {f_n} \right\rvert} - {\left\lvert {f_n - f} \right\rvert} } \right\rvert} \geq {\left\lvert {f_n - (f_n - f)} \right\rvert} = {\left\lvert {f} \right\rvert} \in L^1
 ,\end{align*}
 so the DCT applies to \(g_n\) and
 \begin{align*}
@@ -2346,71 +2529,6 @@ i.e.~\(\int \int {\left\lvert {f(x, y)} \right\rvert} < \infty\), then
 \(f\) is integrable and \(\int f\) equals any iterated integral.
 
 \end{theorem}
-
-\begin{proposition}[Measurable Slices]
-
-Let \(E\) be a measurable subset of \({\mathbb{R}}^n\). Then
-
-\begin{itemize}
-\tightlist
-\item
-  For almost every \(x\in {\mathbb{R}}^{n_1}\), the slice
-  \(E_x \coloneqq\left\{{y \in {\mathbb{R}}^{n_2} \mathrel{\Big|}(x,y) \in E}\right\}\)
-  is measurable in \({\mathbb{R}}^{n_2}\).
-\item
-  The function
-\end{itemize}
-
-\begin{align*}
-F: {\mathbb{R}}^{n_1} &\to {\mathbb{R}}\\
-x &\mapsto m(E_x) = \int_{{\mathbb{R}}^{n_2}} \chi_{E_x} ~dy
-\end{align*}
-is measurable and
-\begin{align*}
-m(E) = \int_{{\mathbb{R}}^{n_1}} m(E_x) ~dx 
-= \int_{{\mathbb{R}}^{n_1}} \int_{{\mathbb{R}}^{n_2}} \chi_{E_x} ~dy ~dx
-.\end{align*}
-
-\end{proposition}
-
-\begin{proof}[of measurable slices]
-
-\envlist
-
-\(\implies\):
-
-\begin{itemize}
-\tightlist
-\item
-  Let \(f\) be measurable on \({\mathbb{R}}^n\).
-\item
-  Then the cylinders \(F(x, y) = f(x)\) and \(G(x, y) = f(y)\) are both
-  measurable on \({\mathbb{R}}^{n+1}\).
-\item
-  Write
-  \(\mathcal{A} = \left\{{G \leq F}\right\} \cap\left\{{G \geq 0}\right\}\);
-  both are measurable.
-\end{itemize}
-
-\(\impliedby\):
-
-\begin{itemize}
-\tightlist
-\item
-  Let \(A\) be measurable in \({\mathbb{R}}^{n+1}\).
-\item
-  Define
-  \(A_x = \left\{{y\in {\mathbb{R}}\mathrel{\Big|}(x, y) \in \mathcal{A}}\right\}\),
-  then \(m(A_x) = f(x)\).
-\item
-  By the corollary, \(A_x\) is measurable set, \(x \mapsto A_x\) is a
-  measurable function, and \(m(A) = \int f(x) ~dx\).
-\item
-  Then explicitly, \(f(x) = \chi_{A}\), which makes \(f\) a measurable
-  function.
-\end{itemize}
-
-\end{proof}
 
 \begin{proposition}[Differentiating Under an Integral]
 
